Safari flex box size fix and cover spacing updates for no-flexbox

--- a/TGDH.Web/assets/css/ie.css
+++ b/TGDH.Web/assets/css/ie.css
@@ -2671,11 +2671,15 @@ button.swiper-pagination-bullet {
   .c-cover__headline {
     font-size: 4rem; }
   .c-cover__subtitle {
-    font-size: 1.4rem; } }
+    font-size: 1.4rem; }
+  .no-flexbox .c-cover__content {
+    margin-top: 6rem; } }
 
 @media only screen and (min-width: 1000px) and (max-width: 1279px) {
   .c-cover__headline {
-    font-size: 4.8rem; } }
+    font-size: 4.8rem; }
+  .no-flexbox .c-cover__content {
+    margin-top: 8rem; } }
 
 @media only screen and (min-width: 1000px) {
   .c-cover__content {
@@ -2685,7 +2689,9 @@ button.swiper-pagination-bullet {
   .c-cover__subtitle {
     font-size: 1.8rem; }
   .c-cover__headline {
-    font-size: 6rem; } }
+    font-size: 6rem; }
+  .no-flexbox .c-cover__content {
+    margin-top: 14rem; } }
 
 /* ===========================================================
 
@@ -3640,6 +3646,7 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
 
 .c-logo {
   width: 50%;
+  width: calc(50% - 1px);
   float: left;
   padding: 1.6em 0; }
 
@@ -3666,11 +3673,13 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
 
 @media only screen and (min-width: 600px) and (max-width: 799px) {
   .c-logo {
-    width: 33.3333333333%; } }
+    width: 33.3333333333%;
+    width: calc(33.3333333333% - 1px); } }
 
 @media only screen and (min-width: 800px) {
   .c-logo {
-    width: 25%; } }
+    width: 25%;
+    width: calc(25% - 1px); } }
 
 /* ===========================================================
 
@@ -4021,6 +4030,32 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
   margin-right: -.5rem;
   margin-bottom: -3.2em; }
 
+.flexwrap .c-profile-card-listing {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+
+.flexwrap .c-profile-card {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.flexwrap .c-profile-card__subtitle {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
+
 @media only screen and (max-width: 799px) {
   .c-profile-card-listing .c-profile-card {
     *zoom: 1;
@@ -4029,7 +4064,8 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
     text-align: inherit;
     width: 50%;
     margin-left: 0%;
-    margin-right: 0%; }
+    margin-right: 0%;
+    width: calc(50% - 1px); }
     .c-profile-card-listing .c-profile-card:before, .c-profile-card-listing .c-profile-card:after {
       content: '';
       display: table; }
@@ -4048,7 +4084,8 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
     text-align: inherit;
     width: 33.3333333333%;
     margin-left: 0%;
-    margin-right: 0%; }
+    margin-right: 0%;
+    width: calc(33.3333333333% - 1px); }
     .c-profile-card-listing .c-profile-card:before, .c-profile-card-listing .c-profile-card:after {
       content: '';
       display: table; }
@@ -4059,6 +4096,13 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
     .c-profile-card-listing .c-profile-card:nth-child(3n + 1) {
       clear: both; } }
 
+@media only screen and (max-width: 999px) {
+  .flexbox .c-profile-card .c-social {
+    display: block;
+    margin-left: -1rem; }
+  .flexbox .c-profile-card .c-social__link {
+    padding: 1rem; } }
+
 @media only screen and (min-width: 1000px) {
   .c-profile-card-listing .c-profile-card {
     *zoom: 1;
@@ -4067,7 +4111,8 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
     text-align: inherit;
     width: 25%;
     margin-left: 0%;
-    margin-right: 0%; }
+    margin-right: 0%;
+    width: calc(25% - 1px); }
     .c-profile-card-listing .c-profile-card:before, .c-profile-card-listing .c-profile-card:after {
       content: '';
       display: table; }
@@ -4226,6 +4271,7 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
 
 .c-logo {
   width: 50%;
+  width: calc(50% - 1px);
   float: left;
   padding: 1.6em 0; }
 
@@ -4252,11 +4298,13 @@ a.c-pagination__link:hover, a.c-pagination__link:focus {
 
 @media only screen and (min-width: 600px) and (max-width: 799px) {
   .c-logo {
-    width: 33.3333333333%; } }
+    width: 33.3333333333%;
+    width: calc(33.3333333333% - 1px); } }
 
 @media only screen and (min-width: 800px) {
   .c-logo {
-    width: 25%; } }
+    width: 25%;
+    width: calc(25% - 1px); } }
 
 /* ===========================================================
 
