--- a/_assets/sass/components/profile-card.scss
+++ b/_assets/sass/components/profile-card.scss
@@ -31,12 +31,31 @@
 	margin-bottom: -$line-height * 2;
 }
 
+.flexwrap {
+
+	.c-profile-card-listing {
+		display: flex;
+    	flex-wrap: wrap;
+	}
+
+	.c-profile-card {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.c-profile-card__subtitle {
+		flex: 1 1 auto;
+	}
+
+}
+
 @include respond-max( $mq-medium ) {
 
 	.c-profile-card-listing {
 
 		.c-profile-card	{
 			@include span(1/2, $cycle: 2);
+			width: calc(50% - 1px);
 		}
 
 	}
@@ -49,11 +68,33 @@
 
 		.c-profile-card	{
 			@include span(1/3, $cycle: 3);
+			width: calc(33.3333333333% - 1px);
 		}
 
 	}
 
 }
+
+@include respond-max( $mq-large ) {
+
+	.flexbox {
+
+		.c-profile-card {
+
+			.c-social {
+				display: block;
+				margin-left: -1rem;
+			}
+
+			.c-social__link {
+				padding: 1rem;
+			}
+		}
+
+	}
+
+}
+
 
 @include respond-min( $mq-large ) {
 
@@ -61,6 +102,7 @@
 
 		.c-profile-card	{
 			@include span(1/4, $cycle: 4);
+			width: calc(25% - 1px);
 		}
 
 	}
